fix(customActions): button overflow (#3489)

--- a/src/pages/common/components/infobar/Infobar/InfobarCustomerInfo/InfobarWidgets/widgets/customActions/ActionButtons/ActionButtons.less
+++ b/src/pages/common/components/infobar/Infobar/InfobarCustomerInfo/InfobarWidgets/widgets/customActions/ActionButtons/ActionButtons.less
@@ -10,6 +10,7 @@
         margin-bottom: 8px;
         padding: 0;
         button {
+            display: block;
             overflow: hidden;
             text-overflow: ellipsis;
             background-color: var(--neutral-grey-0) !important;
@@ -75,9 +76,10 @@
         flex-wrap: nowrap !important;
     }
     .actionButton {
+        flex: 1 1 auto;
+        display: block;
         overflow: hidden;
         text-overflow: ellipsis;
-        flex: 1 0 auto;
     }
     .dropdownItem {
         max-width: 260px;
